--- a/swagger/paths/contacts/get.yaml
+++ b/swagger/paths/contacts/get.yaml
@@ -65,7 +65,7 @@ responses:
                 data:
                   type: array
                   items:
-                    $ref: '../../components/schemas/student.yaml'
+                    $ref: ../../components/schemas/contact.yaml
                 page:
                   type: number
                   example: 2
